1.  Fixed overflowing text in note popup
2.  Added Note Delete Button

--- a/style.css
+++ b/style.css
@@ -120,7 +120,16 @@ nav {
   overflow: hidden;
 }
 
+.deleteBtn {
+  align-self: flex-end;
+  color:crimson;
+  font-size: 20px;
+  padding: 8px 16px;
+  margin-top: auto;
+}
 
+
+/*  Note Popup */
 .notePopup {
   border-radius: 8px;
   box-shadow: 0px 0px 15px 0px gray;
@@ -139,11 +148,10 @@ nav {
   z-index: 1;
 }
 
-
-/* .notePopup > p {
-  min-height: 200px;
+.notePopup > p {
+  /* min-height: 200px; */
   overflow: scroll;
-} */
+}
 
 
 .blur {
